plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.ieb.zxingtest'
    compileSdk 36

    defaultConfig {
        applicationId "com.ieb.zxingtest"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

